--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -7,6 +7,7 @@
   <title>portifolio.Gizaw </title>
   <link rel="icon" type="image/x-icon" href="https://mir-s3-cdn-cf.behance.net/project_modules/disp/945b0225337909.563440870421b.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <meta http-equiv="Refresh" content="2; url=public/index.html" />
 </head>
 <body>
   <div id = "root"></div>
